[package]
name = "NetMirror"
version = "0.1.0"
edition = "2024"

[dependencies]
axum= "0.8.9"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors","fs"] }
reqwest = { version = "0.11.18",default-features=false, features = ["json","rustls-tls"] }

